Fixes documentation of secondary nav. Addresses some spacing issues in search results.

--- a/_scss/component/search/result.scss
+++ b/_scss/component/search/result.scss
@@ -16,7 +16,7 @@
 
 .usajobs-search-results {
   @include cardInset();
-  max-width: rem(800px);
+  background-color: $color-white;
 }
 
 .usajobs-search .usajobs-search-result--card {
